@@ -5,6 +5,9 @@ i-MSCP ChangeLog
 i-MSCP Git Master
 -------------------------------------------------------------------------------------
 
+ENGINE:
+	- Fixed SPF record syntax
+
 -------------------------------------------------------------------------------------
 i-MSCP 1.1.0-rc1.4
 -------------------------------------------------------------------------------------
